devops/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kaiju-deployment
  namespace: stage-back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kaiju-app
  template:
    metadata:
      labels:
        project: deligram
        app: kaiju-app
    spec:
      containers:
        - name: kaiju-app
          image: harbor.deligram.com/flash-admin/flash-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: kaiju-port
              protocol: TCP
      imagePullSecrets:
        - name: regcred
