devops/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kaiju-svc
  namespace: stage-back
spec:
  ports:
    - name: kaiju-svc-port
      port: 80
      targetPort: kaiju-port
  selector:
    app: kaiju-app
  type: ClusterIP
